--- a/src/app/connect/connect.component.html
+++ b/src/app/connect/connect.component.html
@@ -1,4 +1,4 @@
-<h3>Connect with Me</h3>
+<h3>Let's Connect!</h3>
 <div>
   <app-linkedin></app-linkedin>
   <a href="mailto: zambeezy008@gmail.com">
