--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,7 +10,7 @@ body {
   --secondary-btn-text: #333;
   --button-hover-bg: #EEE;
   --app-background-color: #FFF;
-  --shadow-color: #999;
+  --shadow-color: #bbb;
 
   --banner-height: 50px;
 
@@ -31,7 +31,7 @@ body.dark {
   --secondary-btn-text: #FFF;
   --button-hover-bg: #999;
   --app-background-color: #333;
-  --shadow-color: #aaa;
+  --shadow-color: #777;
 }
 
 body.cursive {
