--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,6 +2,23 @@
 
 :host {
   @include page-content;
+  padding-top: 0;
+}
+
+.section-header {
+  background-color: var(--primary-color);
+  border-top: 1px solid #fff;
+  box-shadow: 0px 2px 2px var(--shadow-color);
+  margin: 0 -15px;
+  padding: 10px 0;
+  position: sticky;
+  text-align: center;
+  top: 50px;
+  z-index: 10;
+
+  &:not(:first-of-type) {
+    margin-top: 200px;
+  }
 }
 
 .pillars {
@@ -119,60 +136,56 @@ img {
   @include standard-img;
 }
 
-.who-am-i {
-  box-sizing: border-box;
-  margin: 100px 0;
-
-  .about-me {
-    h3 {
-      font-weight: normal;
-    }
+.about-me {
+  padding: 20px 0;
+  h3 {
+    font-weight: normal;
   }
+}
 
-  .background-photos {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: 0;
+.background-photos {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  li {
+    flex: auto;
+    height: 150px;
+    cursor: pointer;
+    position: relative;
+    list-style-type: none;
     padding: 0;
 
-    li {
-      flex: auto;
-      height: 150px;
-      cursor: pointer;
-      position: relative;
-      list-style-type: none;
-      padding: 0;
-
-      @media screen and (min-width: 600px) {
-        height: 250px;
-      }
+    @media screen and (min-width: 600px) {
+      height: 250px;
     }
-    
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      vertical-align: middle;
-      margin: 0;
-      transition: transform .5s;
+  }
+  
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    margin: 0;
+    transition: transform .5s;
 
 
-      &:hover {
-        opacity: 1;
-        transform: scale(1.75);
-        box-shadow: 0px 0px 8px var(--shadow-color);
-        
-        position: relative;
-        z-index: 1;
+    &:hover {
+      opacity: 1;
+      transform: scale(1.75);
+      box-shadow: 0px 0px 8px var(--shadow-color);
+      
+      position: relative;
+      z-index: 1;
 
-        &#first-personal-img {
-          transform: scale(1.75) translateX(20%);
-        }
+      &#first-personal-img {
+        transform: scale(1.75) translateX(20%);
+      }
 
-        &#last-personal-img {
-          transform: scale(1.75) translateX(-20%);
-        }
+      &#last-personal-img {
+        transform: scale(1.75) translateX(-20%);
       }
     }
   }
