--- a/src/app/connect/connect.component.scss
+++ b/src/app/connect/connect.component.scss
@@ -2,8 +2,11 @@
 
 :host {
   align-items: center;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
+  margin-bottom: 20px;
   width: 100%;
 }
 
