--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 :host {
   background-color: var(--primary-color);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 2px 2px var(--shadow-color);
   box-sizing: border-box;
   color: var(--text-color);
   display: flex;
@@ -17,12 +17,6 @@
   .site-title {
     cursor: pointer;
     margin: auto 0;
-  }
-}
-
-body.dark {
-  :host {
-    border-bottom: 1px solid #FFF;
   }
 }
 
