--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -4,22 +4,29 @@
   @include page-content;
 }
 
-.setting-option {
-  align-items: center;
-  display: flex;
-  padding: 20px;
+.setting-options {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  padding: 20px 0;
 
   span {
     color: var(--text-color);
     font-size: 16px;
-    padding-right: 40px;
+    display: flex;
+    align-items: center;
   }
 
-  mat-select {
-    border-radius: var(--default-border-radius);
-    box-shadow: 1px 1px 3px var(--shadow-color);
-    box-sizing: border-box;
-    padding: 5px 10px;
-    width: 200px;
+  .control {
+    align-items: center;
+    display: flex;
+    padding: 20px 0;
+
+    mat-select {
+      border-radius: var(--default-border-radius);
+      box-shadow: 1px 1px 3px var(--shadow-color);
+      box-sizing: border-box;
+      padding: 5px 10px;
+      width: 150px;
+    }
   }
 }
