Renames settings to style for brevity

--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -6,5 +6,5 @@
   <button class="nav-btn" (click)="selectMenuOption('/about')">About</button>
   <button class="nav-btn" (click)="selectMenuOption('/experience')">Experience</button>
   <button class="nav-btn" (click)="selectMenuOption('/portfolio')">Portfolio</button>
-  <button class="nav-btn" (click)="selectMenuOption('/settings')">Settings</button>
+  <button class="nav-btn" (click)="selectMenuOption('/style')">Style</button>
 </div>
