Adds site avatar

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,7 +26,7 @@
 
 <h1 class="section-header">Working With Me</h1>
 
-<h3>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/settings">settings</a> to make your experience unique.</h3>
+<h3>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/style">styles</a> to make your experience unique.</h3>
 
 <div class="pillars">
   <div class="site-pillar">
