--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,5 @@
-<span class="site-title" [routerLink]="'/'">The Official Website of Nick Zambelli</span>
+<div class="site-title" [routerLink]="'/'">
+  <img src="assets/personal-photos/avatar.jpeg" />
+  <span>Nick Zambelli</span>
+</div>
 <app-navigation-menu></app-navigation-menu>
