Resolves layering issue with navigation menu

--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -1,5 +1,6 @@
 :host {
   height: 100%;
+  z-index: 3;
 }
 
 .nav-options {
@@ -20,6 +21,7 @@
     flex-direction: column;
     position: absolute;
     right: 0;
+    z-index: 3;
 
     .nav-btn {
       background-color: var(--primary-color);
