--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,7 +12,11 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 3;
+
+  &.no-shadow {
+    box-shadow: none;
+  }
 
   .site-title {
     align-items: center;
