--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -14,16 +14,54 @@
   position: sticky;
   text-align: center;
   top: 50px;
-  z-index: 2;
+  z-index: 2000;
 
   &:not(:first-of-type) {
-    margin-top: 200px;
+    margin-top: 125px;
   }
+}
+
+.about-me {
+  align-items: center;
+  display: flex;
+  padding: 20px 0;
+
+  div {
+    padding: 0 10px;
+
+    h3 {
+      font-weight: normal;
+    }
+  }
+
+  img {
+    object-fit: cover;
+    height: 200px;
+    vertical-align: middle;
+    margin: 0;
+    transition: transform .5s;
+  }
+
+  @media screen and (max-width: 900px) {
+      justify-content: center;
+      flex-wrap: wrap;
+
+      div {
+        padding: 0;
+        order: 1;
+      }
+
+      img {
+        order: 2;
+        
+      }
+    }
 }
 
 .pillars {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
+  padding-top: 20px;
 
   .site-pillar {
     align-items: center;
@@ -80,16 +118,52 @@
     width: 100%;
   }
 
-  h1 {
-    margin-bottom: 5px;
-    margin-top: 20px;
-    text-align: center;
+  .photos {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    height: 170px;
+    padding: 10px 0;
+    position: relative;
+    top: 0;
+    width: 100%;
+
+    @media screen and (max-width: 750px) {
+      justify-content: center;
+      opacity: .15;
+    }
+
+    div {
+      height: inherit;
+
+      img {
+        height: inherit;
+      }
+    }
   }
 
-  h2 {
-    margin-bottom: 20px;
-    margin-top: 5px;
-    text-align: center;
+  .details {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: -170px;
+    height: 170px;
+    position: relative;
+    top: 0;
+    width: 100%;
+
+    h1 {
+      margin-bottom: 5px;
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+      margin-top: 5px;
+      text-align: center;
+    }
   }
 }
 
@@ -136,57 +210,3 @@ img {
   @include standard-img;
 }
 
-.about-me {
-  padding: 20px 0;
-  h3 {
-    font-weight: normal;
-  }
-}
-
-.background-photos {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-
-  li {
-    flex: auto;
-    height: 150px;
-    cursor: pointer;
-    position: relative;
-    list-style-type: none;
-    padding: 0;
-
-    @media screen and (min-width: 600px) {
-      height: 250px;
-    }
-  }
-  
-  img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    margin: 0;
-    transition: transform .5s;
-
-
-    &:hover {
-      opacity: 1;
-      transform: scale(1.75);
-      box-shadow: 0px 0px 8px var(--shadow-color);
-      
-      position: relative;
-      z-index: 1;
-
-      &#first-personal-img {
-        transform: scale(1.75) translateX(20%);
-      }
-
-      &#last-personal-img {
-        transform: scale(1.75) translateX(-20%);
-      }
-    }
-  }
-}
