Adds auto scroll to top on page change

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -23,6 +23,7 @@
     cursor: pointer;
     display: flex;
     margin: auto 0;
+    text-decoration: none;
     
     img {
       border-radius: 50%;
