--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -89,11 +89,13 @@
       width: 50px;
     }
   }
-}
 
-@media screen and (max-width: 750px) {
-  .pillars {
+  @media screen and (max-width: 900px) {
     grid-template-columns: 50% 50%;
+  }
+
+  @media screen and (max-width: 600px) {
+    grid-template-columns: 100%
   }
 }
 
