--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="site-title" [routerLink]="'/'">
+<a class="site-title" href="https://github.com/Zambelli24" target="_blank" rel="noopener noreferrer">
   <img src="assets/personal-photos/avatar.jpeg" />
   <span>Nick Zambelli</span>
-</div>
+</a>
 <app-navigation-menu></app-navigation-menu>
