--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,15 +2,25 @@
   align-items: center;
   background-color: var(--primary-color);
   box-sizing: border-box;
-  top: 50px;
   color: var(--text-color);
   display: flex;
   height: var(--banner-height);
   justify-content: space-between;
   left: 0;
+  bottom: 0;
   padding: 0 10px;
-  position: relative;
+  position: fixed;
   width: 100%;
+  z-index: 3000;
+
+  &.transparent {
+    opacity: 0.1;
+    transition: opacity 0.75s ease-in-out;
+  }
+
+  @media screen and (max-width: 600px) {
+    padding: 0;
+  }
 }
 
 body.dark {
