--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,10 +2,10 @@
   background-color: var(--app-background-color);
   box-sizing: border-box;
   display: block;
-  min-height: calc(100vh - (2 * var(--banner-height)));
   padding: 15px;
+  padding-bottom: calc(1.5 * var(--banner-height));
+  padding-top: var(--banner-height);
   position: relative;
-  top: 50px;
 }
 
 @mixin standard-img {
