--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,7 @@
 :host {
   align-items: center;
   background-color: var(--primary-color);
+  box-shadow: 0px -2px 4px var(--shadow-color);
   box-sizing: border-box;
   color: var(--text-color);
   display: flex;
@@ -15,7 +16,7 @@
 
   &.transparent {
     opacity: 0.1;
-    transition: opacity 0.75s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
   }
 
   @media screen and (max-width: 600px) {
