--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -2,6 +2,7 @@
   background-color: var(--app-background-color);
   box-sizing: border-box;
   display: block;
+  min-height: 100vh;
   padding: 15px;
   padding-bottom: calc(1.5 * var(--banner-height));
   padding-top: var(--banner-height);
@@ -16,7 +17,7 @@
 @mixin card {
   align-items: center;
   border-radius: var(--default-border-radius);
-  box-shadow: 2px 2px 5px var(--secondary-color);
+  box-shadow: 2px 2px 10px var(--secondary-color);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
