Uses fontawesome for all tech logos
This reduces bundles and improves efficiency. It also makes the look and
feel more consistent and easier to invert the color scheme.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,25 +14,25 @@
 
 <div class="pillars">
   <div class="site-pillar">
-    <mat-icon fontIcon="shutter_speed"></mat-icon> 
+    <app-icon [icon]="pillarOneIcon" [inverted]="true"></app-icon>
     <h3 class="pillar-name">Efficient</h3>
     <span>Inefficiency breeds latency and no one will use a slow site</span>
   </div>
   
   <div class="site-pillar">
-    <mat-icon fontIcon="mobile_friendly"></mat-icon> 
+    <app-icon [icon]="pillarTwoIcon" [inverted]="true"></app-icon>
     <h3 class="pillar-name">Responsive</h3>
     <span>Reach as many users as possible with dynamic layouts fit for all devices</span>
   </div>
   
   <div class="site-pillar">
-    <mat-icon fontIcon="view_module"></mat-icon> 
+    <app-icon [icon]="pillarThreeIcon" [inverted]="true"></app-icon>
     <h3 class="pillar-name">Flexible</h3>
     <span>Change happens daily and my websites are always ready to adapt to your needs</span>
   </div>
   
   <div class="site-pillar">
-    <mat-icon fontIcon="verified_user"></mat-icon> 
+      <app-icon [icon]="pillarFourIcon" [inverted]="true"></app-icon>
     <h3 class="pillar-name">Intuitive</h3>
     <span>User friendly to the max, no tour or explanation necessary</span>
   </div>
