--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 body {
   --primary-color: #b3cee5;
-  --secondary-color: #87CEEB;
-  --tertiary-color: #405580;
+  --secondary-color: #405580;
+  --tertiary-color: #87CEEB;
   --text-color: #333;
   --secondary-text-color: white;
   --primary-btn-color: #F65C40;
