Removes dead code

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -21,12 +21,7 @@
   <h4>Technologies & Languages</h4>
   <div class="technologies">
     <ng-container *ngFor="let tech of exp.technologies">
-      <app-icon class="tech-logo" *ngIf="!!tech.icon" [icon]="tech.icon" [tooltip]="tech.name" [inverted]="true"></app-icon>
-      <img class="tech-logo"
-           *ngIf="!tech.icon"
-           src="{{ tech.logo }}"
-           alt="{{ tech.name }}"
-           title="{{ tech.name }}">
+      <app-icon class="tech-logo" [icon]="tech.icon" [tooltip]="tech.name" [inverted]="true"></app-icon>
     </ng-container>
   </div>
 </a>
