Restyles about page intro section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,17 @@
 <h1 class="section-header">About Me</h1>
 <div class="about-me">
-  <img src="assets/personal-photos/golf.jpeg" alt="golf"/>
   <div>
-    <h3>On the surface you'll see a former collegiate football player, a 4.0 student and someone who gets the job done. I am willing to do whatever it takes to achieve my goals.</h3>
-    <h3>Dig a little deeper and you'll find a man who loves a challenge. A man who is constantly growing and striving to be better than the day before. Patience, perseverance, and consistency are just a few of the values I live by. I am student of life, humbled through experience and eager to learn.</h3>
-    <h3>I am a problem solver, life liver, and go getter. In working with me, you will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from many disparate experiences.</h3>
-    <h3>I love to exercise and compete. I give everything I have in everything I do. I am a passionate golfer. I enjoy hiking, skiing, lifting and running. I am a reader, painter and a student of life. We all have finite time on this Earth, so let's make the most of it. Connect with me today and see how we can pull each other forward.</h3>
+    <h3>I am a former collegiate football player, a 4.0 student and someone who gets the job done. I am willing to do whatever it takes to achieve my goals.You'll find that I am a man who loves a challenge. A man who is constantly growing and striving to be better than the day before.</h3>
+    <img src="assets/personal-photos/campbell-summit.JPG" alt="campbell-summit">
   </div>
-  <img src="assets/personal-photos/beach.jpeg" alt="beach"/>
+  <div class="inverted-background">
+    <img src="assets/personal-photos/beach.jpeg" alt="beach"/>
+    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from many disparate experiences.</h3>
+  </div>
+  <div>
+    <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am a reader, painter and a student of life. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
+    <img src="assets/personal-photos/golf.jpeg" alt="golf"/>
+  </div>
 </div>
 
 <h1 class="section-header">Working With Me</h1>
