--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -22,40 +22,56 @@
 }
 
 .about-me {
-  align-items: center;
-  display: flex;
   padding: 20px 0;
 
   div {
-    padding: 0 10px;
+    align-items: center;
+    display: flex;
+    padding: 25px 0;
 
+    &:first-of-type {
+      padding-top: 0;
+    }
+    
+    &:last-of-type {
+      padding-bottom: 0;
+    }
+    
     h3 {
       font-weight: normal;
+      margin: 0;
     }
-  }
 
-  img {
-    object-fit: cover;
-    height: 200px;
-    vertical-align: middle;
-    margin: 0;
-    transition: transform .5s;
-  }
+    img {
+      object-fit: cover;
+      height: 175px;
+    }
 
-  @media screen and (max-width: 900px) {
+    &.inverted-background {
+      background-color: var(--secondary-color);
+      margin: 0 -20px;
+      padding: 25px 20px;
+
+      h3 {
+        color: var(--secondary-text-color);
+      }
+    }
+
+    @media screen and (max-width: 600px) {
       justify-content: center;
       flex-wrap: wrap;
 
-      div {
-        padding: 0;
+      h3 {
         order: 1;
+        padding-bottom: 10px;
+        text-align: center;
       }
 
       img {
         order: 2;
-        
       }
     }
+  }
 }
 
 .pillars {
