--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,14 +2,15 @@
 
 :host {
   @include page-content;
-  
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .section-header {
   background-color: var(--primary-color);
   border-top: 1px solid #fff;
   box-shadow: 0px 2px 2px var(--shadow-color);
-  margin: 0 -15px;
+  margin: 0;
   padding: 5px 0;
   position: sticky;
   text-align: center;
@@ -49,8 +50,6 @@
 
     &.inverted-background {
       background-color: var(--secondary-color);
-      margin: 0 -20px;
-      padding: 25px 20px;
 
       h3 {
         color: var(--secondary-text-color);
