Fixes typo and adds onend event for audio

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="inverted-background">
     <img src="assets/personal-photos/beach.jpeg" alt="beach"/>
-    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from many disparate experiences.</h3>
+    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am a student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from many disparate experiences.</h3>
   </div>
   <div>
     <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am a reader, painter and a student of life. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
