--- a/src/app/style/style.component.html
+++ b/src/app/style/style.component.html
@@ -1,13 +1,12 @@
 <h3>What better way to show off the modularity and configurability that I strive for in all my work? Change these settings however you like to make your experience on my site unique. Imagine what can be done with your vision!</h3>
 
 <div class="setting-options">
-  <span>Color Palette</span>
+  <span>Color Fade</span>
   <div class="control">
-    <mat-select [formControl]="colorSelector">
-      <mat-option value="">Default</mat-option>
-      <mat-option value="dark">Dark</mat-option>
-      <mat-option value="high-contrast">High Contrast</mat-option>
-    </mat-select>
+    <mat-slide-toggle
+      [checked]="showColorFade"
+      (change)="changeColorFade()"
+    ></mat-slide-toggle>
   </div>
 
   <span>Sharp Corners</span>
@@ -16,6 +15,15 @@
       [checked]="useSharpCorners"
       (change)="changeCorners()"
     ></mat-slide-toggle>
+  </div>
+
+  <span>Color Palette</span>
+  <div class="control">
+    <mat-select [formControl]="colorSelector">
+      <mat-option value="">Default</mat-option>
+      <mat-option value="dark">Dark</mat-option>
+      <mat-option value="high-contrast">High Contrast</mat-option>
+    </mat-select>
   </div>
 
   <span>Font Style</span>
