--- a/src/app/style/style.component.scss
+++ b/src/app/style/style.component.scss
@@ -4,6 +4,10 @@
   @include page-content;
 }
 
+h3 {
+  margin-top: 30px;
+}
+
 .setting-options {
   display: grid;
   grid-template-columns: 50% 50%;
